tests/rosetta/out/C/averages-simple-moving-average.error
cc: exit status 1
/tmp/averages-simple-moving-average.c: In function ‘mochi_main’:
/tmp/averages-simple-moving-average.c:143:14: error: incompatible types when initializing type ‘int’ using type ‘list_float’
  143 |   int sma3 = smaSeries(xs, 3);
      |              ^~~~~~~~~
/tmp/averages-simple-moving-average.c:144:14: error: incompatible types when initializing type ‘int’ using type ‘list_float’
  144 |   int sma5 = smaSeries(xs, 5);
      |              ^~~~~~~~~
/tmp/averages-simple-moving-average.c:148:41: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  148 |     int line = pad(fmt3(xs.data[i]), 5) + "  " + pad(fmt3(sma3.data[i]), 5) +
      |                ~~~~~~~~~~~~~~~~~~~~~~~~ ^
      |                |                        |
      |                char *                   char *
/tmp/averages-simple-moving-average.c:148:63: error: request for member ‘data’ in something not a structure or union
  148 |     int line = pad(fmt3(xs.data[i]), 5) + "  " + pad(fmt3(sma3.data[i]), 5) +
      |                                                               ^
/tmp/averages-simple-moving-average.c:149:36: error: request for member ‘data’ in something not a structure or union
  149 |                "  " + pad(fmt3(sma5.data[i]), 5);
      |                                    ^
